# blockblast-raylib

./: .gitignore  CMakeLists.txt  README.md  blockblast  build.py  compile_flags.txt  main.c
.github/workflows/: release.yml
data/: save.txt
docs/: codebase-guide.md
include/: anim.h  board.h  defs.h  effects.h  float_text.h  game.h  level.h  particle.h  piece.h  render.h  save.h  sound.h  textures.h  ui_layout.h
include/adventure/: adventure.h
include/core/: board.h  config.h  defs.h  game.h  piece.h  theme.h
include/effects/: anim.h  float_text.h  particle.h
include/systems/: font.h  input.h  render.h  score.h  sound.h  textures.h
src/: board.c  effects.c  float_text.c  game.c  game_screens.c  game_settings.c  game_state.c  input.c  level.c  main.c  particle.c  piece.c  render.c  render_board.c  render_core.c  render_frame.c  render_level.c  render_menus.c  render_ui.c  save.c  sound.c  textures.c
src/adventure/: adventure_levels.c  adventure_lives.c  adventure_progress.c
src/core/: board.c  game_screens.c  game_settings.c  game_state.c  main.c  piece.c
src/effects/: anim.c  float_text.c
src/systems/: font.c  input.c  render_adventure.c  render_board.c  render_core.c  render_frame.c  render_menus.c  score.c  sound.c  textures.c
tests/: test_adventure.c  test_board.c  test_piece.c  test_score.c
